# macquarie-teaching-demo-repo

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  app.py  candidate-scoring-app-spec.md  candidate_scoring.db  main.cpp  pyproject.toml  schema.sql  templates.h
templates/: base.html  candidate_detail.html  candidate_form.html  index.html  position_detail.html  position_form.html
